[package]
name = "photo-archive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.21", features = ["derive"], optional = true }


[features]
build-cli = ["clap"]

[[bin]]
name = "cli"
required-features = ["build-cli"]
