[package]
name = "photo-archive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.2"
chrono = "0.4.26"
clap = { version = "4.3.21", features = ["derive"], optional = true }
crc = "3.0.1"
crossbeam = "0.8.2"
image = "0.24.7"
inquire = "0.6.2"
kamadak-exif = "0.5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7.6"


[features]
build-cli = ["clap"]

[[bin]]
name = "cli"
required-features = ["build-cli"]
